@@ -41,23 +41,33 @@ dempiricalD <- function(x,values,prob=NULL,log=FALSE)
 #qempiricalD(seq(0,1,0.1),2:6,prob=c(10,10,70,0,10))
 #table(rempiricalD(10000,2:6,prob=c(10,10,70,0,10)))
 #
-### varying values
+### Varying values
 #(values <- matrix(1:10,ncol=5))
 ### the first x apply to the first row : p = 0.2
 ### the second x to the second one: p = 0
 #dempiricalD(c(1,1),values)
-
+#
+#
+###Use with mc2d
+###Non Parameteric Bootstrap
+#val <- c(100, 150, 170, 200)
+#pr <- c(6, 12, 6, 6)
+#out <- c("min", "mean", "max")
+###First Bootstrap in the uncertainty dimension
+#(x <- mcstoc(rempiricalD, type = "U", outm = out, nvariates = 30, values = val, prob = pr))
+###Second one in the variability dimension
+#mcstoc(rempiricalD, type = "VU", values = x)
 #CREATED 08-06-15
 #--------------------------------------------
 {
-  if(length(x) == 0) return(x)
+  if(length(x) == 0) return(numeric(0))
   if(is.vector(values)) values <- matrix(values,nrow=1)
   if(is.null(prob)) prob <- array(1,dim=dim(values))
   if(is.vector(prob)) prob <- matrix(prob,nrow=1)
 
   if(!is.numeric(values) || !is.numeric(prob) || !is.numeric(x)) stop("Non numeric arguments in a mathematical function")
 
-  if(any(is.na(prob)) || any(apply(prob,1,"<",0)) || any(rowSums(prob)==0))
+  if(any(is.na(prob)) || any(apply(prob,1,"<",0)) || any(rowSums(prob) == 0))
     stop("Nas in prob, or sum(prob)=0 or negative values of prob")
 
   ncv <- ncol(values)
@@ -74,7 +84,7 @@ dempiricalD <- function(x,values,prob=NULL,log=FALSE)
   prob   <- lapply(1:min(nrp,mnr), function(x) prob[x,])
   values <- lapply(1:min(nrv,mnr), function(x) values[x,])
 
-  prob <- mapply(function(pr,val) tapply(pr,val,sum),prob,values,SIMPLIFY=FALSE)
+  prob <- mapply(function(pr,val) tapply(pr,val,sum), prob, values, SIMPLIFY=FALSE)
   prob <- lapply(prob, function(y) y /sum(y))
   values <- lapply(values,function(y) sort(unique(y)))
 
@@ -107,7 +117,7 @@ pempiricalD <- function(q,values,prob=NULL,lower.tail = TRUE, log.p = FALSE)
 #ISALIAS dempiricalD
 #--------------------------------------------
 {
-  if(length(q) == 0) return(q)
+  if(length(q) == 0) return(numeric(0))
   if(is.vector(values)) values <- matrix(values,nrow=1)
   if(is.null(prob)) prob <- array(1,dim=dim(values))
   if(is.vector(prob)) prob <- matrix(prob,nrow=1)
@@ -165,7 +175,7 @@ qempiricalD <- function(p,values,prob=NULL,lower.tail = TRUE, log.p = FALSE)
 #ISALIAS dempiricalD
 #--------------------------------------------
 {
-  if(length(p) == 0) return(p)
+  if(length(p) == 0) return(numeric(0))
   if(is.vector(values)) values <- matrix(values,nrow=1)
   if(is.null(prob)) prob <- array(1,dim=dim(values))
   if(is.vector(prob)) prob <- matrix(prob,nrow=1)
@@ -222,15 +232,16 @@ rempiricalD <- function(n,values,prob=NULL)
 #ISALIAS dempiricalD
 #--------------------------------------------
 {
-  if(length(n) == 0) return(n)
   if(length(n) > 1) n <- length(n)
-
+  if(length(n) == 0 || as.integer(n) == 0) return(numeric(0))
+  n <- as.integer(n)
+  if(n < 0) stop("integer(n) cannot be negative in rempiricalD")
+ 
   if(is.vector(values)) values <- matrix(values,nrow=1)
-  if(is.null(prob)) prob <- array(1,dim=dim(values))
+  if(is.null(prob))     prob <- rep(1,length(values[1,]))
+  if(is.vector(prob))   prob <- matrix(prob,nrow=1)
 
   if(!is.numeric(values) || !is.numeric(prob) || !is.numeric(n)) stop("Non numeric arguments in a mathematical function")
-
-  if(is.vector(prob)) prob <- matrix(prob,nrow=1)
 
   ncv <- ncol(values)
   ncp <- ncol(prob)
